Attempt to fix bug of like button appearing off screen

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -248,27 +248,6 @@ body {
     font-size: large;
 }
 
-/* Like button and comment counter */
-
-.btn-like {
-    color: #E84610;
-    border: none;
-    background: transparent;
-    font-size: 12px;
-    padding: 5px;
-
-}
-
-.btn-like:hover,
-.btn-like:active {
-    color: #E84610;
-    background: transparent;
-    border: none;
-}
-
-.fa-comments {
-    font-size: 12px;
-}
 
 /* Responsiveness */
 @media screen and (max-width:1190px) {
@@ -293,7 +272,6 @@ body {
         font-size: medium;
     }
 }
-
 
 @media screen and (max-width:460px) {
 
